--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "bootstrap": "^5.3.1",
+    "datatables.net": "^1.13.6",
+    "datatables.net-dt": "^1.13.6",
+    "jquery": "^3.7.0",
     "react": "^18.2.0",
-    "react-alert": "^7.0.3",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
@@ -45,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.16",
     "@types/react-alert": "^7.0.2"
   }
 }
