--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,9 +17,16 @@
     "@types/react-dom": "^18.2.7",
     "bootstrap": "^5.3.1",
     "datatables.net": "^1.13.6",
+    "datatables.net-bs4": "^1.13.6",
+    "datatables.net-buttons": "^2.4.1",
+    "datatables.net-buttons-bs4": "^2.4.1",
     "datatables.net-dt": "^1.13.6",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.7.0",
+    "jszip": "^3.10.1",
+    "pdfmake": "^0.2.7",
     "react": "^18.2.0",
+    "react-alert": "^7.0.3",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
